# simple-ticket-system

./: .gitignore  Makefile  README.md  app.py  clean_run.bash  docker-compose.yml  example.env  models.py  pyproject.toml
app/: __init__.py  app.py  database.py
app/auth/: models.py  views.py
app/tickets/: models.py  views.py
